
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.gahyeonbot'
version = '1.0.0'

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

repositories {
    mavenCentral()
    maven { url = 'https://m2.dv8tion.net/releases' }  // JDA 전용 저장소
    maven { url = 'https://jitpack.io' }               // Lavaplayer 호스팅 가능
}

springBoot {
    mainClass = 'com.gahyeonbot.Main'
}

//shadowJar {
//    archiveClassifier.set('') // 기본 JAR 파일과 구분되는 접미사를 제거합니다. (예: 'all')
//    manifest {
//        attributes 'Main-Class': 'com.gahyeonbot.Main'
//    }
//}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
tasks.named('jar') { enabled = false }
tasks.named('bootJar') { enabled = true }

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Database
    runtimeOnly 'org.postgresql:postgresql:42.7.4'
    runtimeOnly 'com.h2database:h2'

    // Database Migration
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    // JDA (Discord API)
    implementation 'net.dv8tion:JDA:5.2.1'

    // Lavaplayer (음악 재생)
    implementation 'dev.arbjerg:lavaplayer:2.2.2'

    // Spotify API
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:9.1.1'

    // OpenAI API
    implementation platform('org.springframework.ai:spring-ai-bom:1.0.1')
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    // HTTP Client
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core:3.25.3'
}

// Shadow JAR와 Spring Boot JAR 충돌 방지
//tasks.named('jar') {
//    enabled = false
//}
//
//tasks.named('bootJar') {
//    enabled = false
//}
//// Shadow JAR를 기본 JAR로 설정
//assemble.dependsOn shadowJar
